Fix navbar dropdown menu for active item
Due to the upstream changes in #10 the custom Trustlines colorscheme
does not work everywhere anymore. So it goes for the active dropdown
menu items. Unfortunately by a mix of the default color values and the
custom ones, this leads to a white font on white background. This has
been fixed by extending the custom coloscheme for this specific
use-case.

Related to: #20

--- a/apps/block_scout_web/assets/css/theme/_trustlines_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_trustlines_variables.scss
@@ -45,6 +45,16 @@ $header-icon-color-hover: $primary; // nav icon on hover
   background-color: $primary !important;
 } // dropdown item on hover
 
+.dropdown-item.active {
+  background-color: $tertiary !important;
+  /*
+   * The important exclamation is necessary to not get overwritten by default
+   * values. This comes with the downside, that the hover effect does not apply
+   * for the active item anymore. It is considered as fine, since the active
+   * status has precedence.
+   */
+}
+
 // buttons
 $btn-line-bg: $secondary; // button bg
 $btn-line-color: $primary; // button border and font color && hover bg color
