fixup! Fix color theme for modal and tool-tips

--- a/apps/block_scout_web/assets/css/theme/_trustlines_variables-non-critical.scss
+++ b/apps/block_scout_web/assets/css/theme/_trustlines_variables-non-critical.scss
@@ -1,8 +1,6 @@
+// general
 $primary: #0f3255;
-$dark-primary: #1e8cc3;
-$dark-primary-alternate: #1e8cc3;
 $secondary: #f5faff;
 $tertiary: #1e8cc3;
 
-// Fix the colors for the modal (like account QR code modal)
-$btn-line-color: $primary;
+$btn-line-color: $primary; // button border and font color && hover bg color
