--- a/apps/block_scout_web/assets/css/theme/_trustlines_variables.scss
+++ b/apps/block_scout_web/assets/css/theme/_trustlines_variables.scss
@@ -1,5 +1,9 @@
-// Avoid redundancy and re-use the non-critical variables.
-@import "trustlines_variables-non-critical";
+// general
+$primary: #0f3255;
+$dark-primary: #1e8cc3;
+$dark-primary-alternate: #1e8cc3;
+$secondary: #f5faff;
+$tertiary: #1e8cc3;
 
 // footer
 $footer-background-color: $primary;
