--- a/apps/block_scout_web/assets/css/theme/_variables-non-critical.scss
+++ b/apps/block_scout_web/assets/css/theme/_variables-non-critical.scss
@@ -1,5 +1,5 @@
 @import "theme/base_variables";
-@import "neutral_variables-non-critical";
+// @import "neutral_variables-non-critical";
 @import "trustlines_variables-non-critical";
 // @import "xusdt_variables-non-critical";
 // @import "dai_variables-non-critical";
