--- a/apps/block_scout_web/assets/css/components/_custom_tooltips_block_details.scss
+++ b/apps/block_scout_web/assets/css/components/_custom_tooltips_block_details.scss
@@ -18,7 +18,7 @@
     padding: 15px 0px;
     display: inline-block;
     z-index: 1;
-    font-family: Nunito;
+    font-family: 'Inter';
     margin-bottom: 15px;
     opacity: 0;
     transition: opacity 0.5s;
@@ -54,7 +54,7 @@
     left: 52%;
     bottom: 120%;
     padding: 15px 10px;
-    font-family: Nunito;
+    font-family: 'Inter';
     display: inline-block;
     z-index: 1;
     margin-bottom: 15px;
