add Inter font license info

--- a/apps/block_scout_web/assets/css/theme/_fonts.scss
+++ b/apps/block_scout_web/assets/css/theme/_fonts.scss
@@ -77,3 +77,12 @@
   font-display: swap;
   src: url("../../fonts/Inter-SemiBoldItalic.woff?v=3.13") format("woff");
 }
+
+/* Inter font
+    ––––––––––––––––––––––––––––––––––––––––––––––––––––
+    Version : 3.13
+    Website : https://rsms.me/inter/
+    Repo    : https://github.com/rsms/inter
+    Author  : The Inter Project Authors
+    License : SIL OPEN FONT LICENSE Version 1.1
+    –––––––––––––––––––––––––––––––––––––––––––––––––––– */
