--- a/apps/block_scout_web/assets/css/theme/_fonts.scss
+++ b/apps/block_scout_web/assets/css/theme/_fonts.scss
@@ -3,7 +3,7 @@
   font-style: normal;
   font-weight: 200;
   font-display: swap;
-  src: url("../../fonts/Inter-ExtraLight.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-ExtraLight.woff') format('woff');
 }
 
 @font-face {
@@ -11,7 +11,7 @@
   font-style: italic;
   font-weight: 200;
   font-display: swap;
-  src: url("../../fonts/Inter-ExtraLightItalic.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-ExtraLightItalic.woff') format('woff');
 }
 
 @font-face {
@@ -19,7 +19,7 @@
   font-style: normal;
   font-weight: 300;
   font-display: swap;
-  src: url("../../fonts/Inter-Light.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-Light.woff') format('woff');
 }
 
 @font-face {
@@ -27,7 +27,7 @@
   font-style: italic;
   font-weight: 300;
   font-display: swap;
-  src: url("../../fonts/Inter-LightItalic.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-LightItalic.woff') format('woff');
 }
 
 @font-face {
@@ -35,7 +35,7 @@
   font-style: normal;
   font-weight: 400;
   font-display: swap;
-  src: url("../../fonts/Inter-Regular.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-Regular.woff') format('woff');
 }
 
 @font-face {
@@ -43,7 +43,7 @@
   font-style: italic;
   font-weight: 400;
   font-display: swap;
-  src: url("../../fonts/Inter-Italic.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-Italic.woff') format('woff');
 }
 
 @font-face {
@@ -51,7 +51,7 @@
   font-style: normal;
   font-weight: 500;
   font-display: swap;
-  src: url("../../fonts/Inter-Medium.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-Medium.woff') format('woff');
 }
 
 @font-face {
@@ -59,7 +59,7 @@
   font-style: italic;
   font-weight: 500;
   font-display: swap;
-  src: url("../../fonts/Inter-MediumItalic.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-MediumItalic.woff') format('woff');
 }
 
 @font-face {
@@ -67,7 +67,7 @@
   font-style: normal;
   font-weight: 600;
   font-display: swap;
-  src: url("../../fonts/Inter-SemiBold.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-SemiBold.woff') format('woff');
 }
 
 @font-face {
@@ -75,7 +75,7 @@
   font-style: italic;
   font-weight: 600;
   font-display: swap;
-  src: url("../../fonts/Inter-SemiBoldItalic.woff?v=3.13") format("woff");
+  src: url('~fonts/Inter-SemiBoldItalic.woff') format('woff');
 }
 
 /* Inter font
