Include site ID for stats reports in configuration
The site identifier that the client uses to reports stats must differ
for the Blockscout instances (i.e. Laika and TLBC). There this value
became configurable via environment variables. Since there is no such as
a default instance, there is also no default value.

Related to: trustlines-protocol/blockscout#31

--- a/apps/block_scout_web/lib/block_scout_web/templates/layout/app.html.eex
+++ b/apps/block_scout_web/lib/block_scout_web/templates/layout/app.html.eex
@@ -27,7 +27,7 @@
       (function() {
         var u="https://stats.trustlines.network/";
         _paq.push(['setTrackerUrl', u+'matomo.php']);
-        _paq.push(['setSiteId', '8']);
+        _paq.push(['setSiteId', '<%= stats_site_id() %>']);
         var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
         g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
       })();
